--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ path = "src/main.rs"
 name = "backend"
 
 [dependencies]
+actix-session = { version = "0.7.2", features = ["cookie-session"] }
 actix-web = "4"
 argon2 = "0.5.0"
 chrono = "0.4.26"
