Dockerize our backend application

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ name = "backend"
 
 [dependencies]
 actix-cors = "0.6.4"
-actix-session = { version = "0.7.2", features = ["cookie-session"] }
+actix-session = { version = "0.7", features = [ "redis-rs-session", "redis-rs-tls-session" ] }
 actix-web = "4"
 argon2 = "0.5.0"
 chrono = "0.4.26"
