--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,12 @@ name = "backend"
 
 [dependencies]
 actix-cors = "0.6.4"
+actix-multipart = "0.6.0"
 actix-session = { version = "0.7", features = [ "redis-rs-session", "redis-rs-tls-session" ] }
 actix-web = "4"
 argon2 = "0.5.0"
+aws-config = "0.55.3"
+aws-sdk-s3 = "0.28.0"
 chrono = "0.4.26"
 config = { version = "0.13.3", features = ["yaml"] }
 deadpool-redis = "0.12.0"
